day9/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web
spec:
  tls:
  - hosts:
    - myweb.local
    secretName: app-secrets
  rules:
  - host: myweb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-web
            port:
              number: 8080
